Add missing agenda link

--- a/2017-05-01/index.html
+++ b/2017-05-01/index.html
@@ -41,7 +41,7 @@
               <div class="summary">
                   <dl>
                       <dt>Agenda</dt>
-                      <dd><a href="undefined">undefined</a></dd>
+                      <dd><a href="https://www.w3.org/community/hydra/wiki/Conference_Calls">https://www.w3.org/community/hydra/wiki/Conference_Calls</a></dd>
                       <dt>Topics</dt>
                       <dd><ol>
                          <li><a href="#topic-1">Discuss Karol's PRs #113 #114 #115 #116 #117</a>
@@ -69,6 +69,7 @@
                       </dd>
                   </dl>
               </div>
+              <div class="comment"><span class="name">elf Pavlik</span>: present+ elf-pavlik</div>
               <div class="information">elf Pavlik is scribing.</div>
 
               <h1 id="topic-1" class="topic">Topic: Discuss Karol's PRs #113 #114 #115 #116 #117</h1>
