Tweak rendering of audio log

--- a/2017-05-01/index.html
+++ b/2017-05-01/index.html
@@ -58,14 +58,12 @@
                       <dd>elf Pavlik, Markus Lanthaler, Karol Szczepański, Tomasz Pluskiewicz</dd>
                       <dt>Audio Log</dt>
                       <dd>
-                          <div><a href="audio.mp3">audio.mp3</a></div>
-                          <div>
-                              <audio controls="controls" preload="none">
-                                  <source src="audio.mp3" type="audio/mpeg" />
-                                  Warning: Your browser does not support the HTML5 audio element,
-                                  please upgrade.
-                              </audio>
-                          </div>
+                        <audio controls="controls" preload="none">
+                            <source src="audio.mp3" type="audio/mpeg" />
+                            Warning: Your browser does not support the HTML5 audio element,
+                            please upgrade.<br>
+                            <a href="audio.mp3">audio.mp3</a>
+                        </audio>
                       </dd>
                   </dl>
               </div>
