Add missing word

--- a/2017-05-29/index.html
+++ b/2017-05-29/index.html
@@ -51,7 +51,7 @@
                       </ol></dd>
                       <dt>Resolutions</dt>
                       <dd><ol>
-                         <li><a href="#resolution-1">Going, Pavlik will send out the agenda 3 days before the call</a>
+                         <li><a href="#resolution-1">Going forward, Pavlik will send out the agenda 3 days before the call</a>
                          <li><a href="#resolution-2">Merge Karol's PRs #116 #117 #122 #123 #124</a>
                          <li><a href="#resolution-3">Merge PR #121</a>
                          <li><a href="#resolution-4">Send Markus a mail to be invited to the Github organization; Markus will grant read-only access to any member of the CG that asks for it</a>
