Add mail header to scribetool

--- a/scribetool/index.html
+++ b/scribetool/index.html
@@ -25,7 +25,7 @@
    <span class="right-column">
       <div class="button" onclick="javascript:scrawl.showMarkup('raw')">Show Raw Log</div>
       <div class="button" onclick="javascript:scrawl.showMarkup('html')">Show HTML</div>
-      <div class="button" onclick="javascript:scrawl.showMarkup('text')">Show Text</div>
+      <div class="button" onclick="javascript:scrawl.showMarkup('text')" ondblclick="javascript:scrawl.showMarkup('text', true)">Show Text</div>
    </span>
 </div>
 
