Reference attendance/scribe list in how to and make it clear to not manually edit the HTML

--- a/how-to.html
+++ b/how-to.html
@@ -29,6 +29,9 @@
       padding-top: 5em;
       margin-top: -5em;
     }
+    strong {
+      color: #222;
+    }
   </style>
 </head>
 <body>
@@ -96,8 +99,9 @@
               <code>
                 present+ <i>&lt;IRC user name&gt;</i>
               </code>
-              <p>The last thing before starting the call is to elect a scribe and document who it is with the following
-                command:</p>
+              <p>The last thing before starting the call is to elect a scribe (either a volunteer or by picking
+                <a href="https://www.w3.org/community/hydra/wiki/Scribes">the person that hasn't scribed the longest</a>)
+                and document who it is with the following command:</p>
               <code>
                 Scribe: <i>&lt;IRC user name&gt;</i>
               </code>
@@ -153,12 +157,14 @@
                   </ul>
                 </li>
                 <li>Switch to HTML mode by clicking the "Show HTML" button on the right and copy the result
-                  into a file called <i>index.html</i>.</li>
+                  into a file called <i>index.html</i>. <strong>Please do not manually edit the HTML code in any way
+                  as it might break automated processing of those files!</strong></li>
                 <li>Create a pull request to add the folder containing the two files to
                   <a href="https://github.com/HydraCG/Minutes">HydraCG/Minutes on GitHub</a> and give owners
                   permissions to add files to your pull request (this will be used to add the audio recording).</li>
               </ul>
-              <p>Finally, please send the meeting minutes to <a href="mailto:public-hydra@w3.org">public-hydra@w3.org</a>.
+              <p>Finally, please <a href="https://www.w3.org/community/hydra/wiki/Scribes">record attendance in our wiki</a>
+                and send the meeting minutes to <a href="mailto:public-hydra@w3.org">public-hydra@w3.org</a>.
                 You can use scribetool's text output.</p>
           </div>
       </div>
