Retyped log so the actions are now visible in HTML

--- a/2019-01-07/index.html
+++ b/2019-01-07/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telecon Minutes for 2019-01-07 | Hydra W3C Community Group</title>
+  <title>Telecon Minutes for 2019-01-09 | Hydra W3C Community Group</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site:id" content="1524709850">
   <meta name="twitter:creator:id" content="64360611">
@@ -37,7 +37,7 @@
       <div class="pure-g">
           <div class="l-box pure-u-1">
               <h1>Hydra W3C Community Group Telecon</h1>
-              <h2>Minutes for 2019-01-07</h2>
+              <h2>Minutes for 2019-01-09</h2>
               <div class="summary">
                   <dl>
                       <dt>Agenda</dt>
@@ -51,6 +51,12 @@
                       <dt>Resolutions</dt>
                       <dd><ol>
                          <li><a href="#resolution-1">obsolete issues to be labeled and closed</a>
+                      </ol></dd>
+                      <dt>Action Items</dt>
+                      <dd><ol>
+                         <li><a href="#action-1">transcription service for conference</a>
+                         <li><a href="#action-2">close items declared as obsolete</a>
+                         <li><a href="#action-3">Karol to create a repo for the docs/gitbook</a>
                       </ol></dd>
                       <dt>Chair</dt>
                       <dd>Karol Szczepański</dd>
@@ -71,7 +77,7 @@
               </div>
               <div class="comment"><span class="name">Karol Szczepański</span>: Meeting: Hydra W3C Community Group Conference Call</div>
               <div class="information">Tomasz Pluskiewicz is scribing.</div>
-              <div class="information">Action item: transcription service for conference</div>
+              <div id="action-1" class="action"><strong>ACTION</strong>: transcription service for conference</div>
               
               <h1 id="topic-1" class="topic">Topic: Agreement on closing 16 issues as obsolete</h1>
               <div class="comment"><span class="name">Karol Szczepański</span>:  we reviewed github issues and identified such that can be easily closed</div>
@@ -91,7 +97,7 @@
               <div id="resolution-1" class="resolution"><strong>RESOLUTION:</strong> obsolete issues to be labeled and closed</div>
               
               <h1 id="topic-2" class="topic">Topic: Agreement on resolving 12 issues</h1>
-              <div class="information">Action item: close items declared as obsolete</div>
+              <div id="action-2" class="action"><strong>ACTION</strong>: close items declared as obsolete</div>
               <div class="comment"><span class="name">Karol Szczepański</span>:  the second set of items have to be analyzed one by one and PRs need to be created</div>
               <div class="comment"><span class="name">Tomasz Pluskiewicz</span>:  maybe we should label them, maybe assign to owner of the issues [scribe assist by Karol Szczepański]</div>
               <div class="comment"><span class="name">Karol Szczepański</span>:  the are quite technical</div>
@@ -154,8 +160,7 @@
               <div class="comment"><span class="name">Karol Szczepański</span>: - API documentation part of the hydra spec</div>
               <div class="comment"><span class="name">Karol Szczepański</span>: - create a gitbook that should serve as a high level digestible source of knowledge about hydra</div>
               <div class="comment"><span class="name">Karol Szczepański</span>: - provide some live demo i.e. revamped hydra console</div>
-              <div class="information">Action item: Karol to create a repo for the docs/gitbook</div>
-              <div class="comment"><span class="name">Karol Szczepański</span>: Action point: Karol_Szczepanski to create GitHub repo for the gitbook</div>
+              <div id="action-3" class="action"><strong>ACTION</strong>: Karol to create a repo for the docs/gitbook</div>
               <div class="comment"><span class="name">Lorenzo Moriondo</span>:  it would be nice to have teams to have more people in hydra-cg</div>
               <div class="comment"><span class="name">Lorenzo Moriondo</span>:  we should create a missions document for Hydraq so that people know what it is about</div>
               <div class="comment-continuation">... we would like to talk more about this part</div>
