Remove audio log link - didn't hit the record button. Fixed date after last update

--- a/2019-01-07/index.html
+++ b/2019-01-07/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telecon Minutes for 2019-01-09 | Hydra W3C Community Group</title>
+  <title>Telecon Minutes for 2019-01-07 | Hydra W3C Community Group</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site:id" content="1524709850">
   <meta name="twitter:creator:id" content="64360611">
@@ -37,7 +37,7 @@
       <div class="pure-g">
           <div class="l-box pure-u-1">
               <h1>Hydra W3C Community Group Telecon</h1>
-              <h2>Minutes for 2019-01-09</h2>
+              <h2>Minutes for 2019-01-07</h2>
               <div class="summary">
                   <dl>
                       <dt>Agenda</dt>
@@ -65,14 +65,7 @@
                       <dt>Present</dt>
                       <dd>Karol Szczepański, Tomasz Pluskiewicz, Lorenzo Moriondo, Thomas Bergwinkl</dd>
                       <dt>Audio Log</dt>
-                      <dd>
-                        <audio controls="controls" preload="none">
-                            <source src="audio.mp3" type="audio/mpeg" />
-                            Warning: Your browser does not support the HTML5 audio element,
-                            please upgrade.<br>
-                            <a href="audio.mp3">audio.mp3</a>
-                        </audio>
-                      </dd>
+                      <dd><aside>Due to technical problems, audio log is unavailable.</aside></dd>
                   </dl>
               </div>
               <div class="comment"><span class="name">Karol Szczepański</span>: Meeting: Hydra W3C Community Group Conference Call</div>
