move repeating text from titles into layout file

--- a/how-to.html
+++ b/how-to.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: How do I Attend a Call? How Do I Run a Call and Scribe? | Hydra W3C Community Group
+title: How do I Attend a Call? How Do I Run a Call and Scribe?
 ---
 
 <h1>Telephone Conferences</h1>
