mention irc log encoding requirement

--- a/how-to.html
+++ b/how-to.html
@@ -97,7 +97,7 @@ title: How do I Attend a Call? How Do I Run a Call and Scribe?
     create a pull request to upload them to GitHub:</p>
 <ul>
     <li>Create a new folder using the date of the conference call in the format <i>yyyy-mm-dd</i>.</li>
-    <li>Create a file <i>irc.log</i> containing the IRC log of the conference call.</li>
+    <li>Create a file <i>irc.log</i> containing the IRC log of the conference call. (has to be UTF-8)</li>
     <li>Create a pull request to add the folder containing the two files to
         <a href="https://github.com/HydraCG/Minutes">HydraCG/Minutes on GitHub</a> and give owners
         permissions to add files to your pull request (this will be used to add the audio recording).
